@@ -10,7 +10,8 @@
 
 {% if success %}
 
-<p>Your registration is now complete.  Please <a href="/accounts/login">login</a> to begin using OneOffCast.
+<p>Your registration is now complete.  Please <a
+      href="/accounts/login">login</a> to begin using the site.
 </p>
 
 {% else %}
